[tool.poetry]
name = "playwrightdocs"
version = "0.1.0"
description = "Playwri官方文档中文版"
authors = ["wangchaoqun <wangchaoqun@tezign.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
recommonmark = "^0.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
